# llamaindex-docs-agent

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/api/routers/: chat.py
backend/app/utils/: index.py  misc.py  test.py
backend/app/utils/node_parsers/: markdown.py
backend/app/utils/transformations/: __init__.py  deduplicator.py  hyperlinks_remover.py  summarizer.py  upserter.py  url_extractor.py
backend/app/utils/vectorstores/: dummy.py
backend/pipeline_storage/: docstore.json  llama_cache
frontend/: tsconfig.json
frontend/app/: page.tsx
frontend/app/components/: chat-section.tsx  header.tsx  transform.ts
frontend/app/components/ui/: nodes.tsx
frontend/app/components/ui/chat/: chat-avatar.tsx  chat-message.tsx  chat-messages.tsx  chat.interface.ts
frontend/app/hooks/: useNodes.ts
